--- a/package.json
+++ b/package.json
@@ -11,13 +11,19 @@
   "dependencies": {
     "@clerk/nextjs": "^6.19.4",
     "@radix-ui/react-dialog": "^1.1.13",
+    "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-slot": "^1.2.2",
+    "@stream-io/node-sdk": "^0.4.24",
+    "@stream-io/video-react-sdk": "^1.16.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.511.0",
     "next": "15.3.2",
+    "next-themes": "^0.4.6",
     "react": "^19.0.0",
+    "react-datepicker": "^8.3.0",
     "react-dom": "^19.0.0",
+    "sonner": "^2.0.3",
     "tailwind-merge": "^3.3.0"
   },
   "devDependencies": {
